# Enchanted-Obsidian

./: .cursorrules  .dockerignore  .firebaserc  .gitignore  Dockerfile  ENCHANTED_OBSIDIAN_MANIFEST.md  EnchantedVault.vbs  IRONCLAD_PIPELINE_MANIFEST.md  IRONCLAD_SPEC.md  README.md  SovereignManifest.md  W2W_SYNC_HANDOFF.md  WORKSPACE_IDENTITY.md  azure_provisioning.bicep  docker-compose.yml  firebase.json  index.html  ironclad_whitepaper.md  package-lock.json  package.json  vercel.json  vite.config.js
.firebase/: hosting.ZGlzdA.cache  hosting.aXJvbmNsYWRfZGFzaGJvYXJkXGJ1aWxkXHdlYg.cache
.github/workflows/: android.yml
api/: package-lock.json  package.json
api/GetCalendar/: index.js
api/GetObsidianIndex/: index.js
api/GetProgress/: index.js
api/TriggerBuild/: index.js
api/w2w-porter/: index.js
firebase/: firestore.rules
firebase/functions/: index.js  package-lock.json  package.json
ironclad_dashboard/: README.md  build_out.txt  pubspec.yaml
ironclad_dashboard/lib/: main.dart
ironclad_dashboard/test/: widget_test.dart
ironclad_dashboard/web/: index.html  manifest.json
scratch/: check_ledger.js
scripts/: EnchantedLauncher.bat  LaunchHidden.vbs  PA_SETUP.md  big_clean.py  generate_launcher.ps1  link_ingester_bot.py  pi_deploy.sh  requirements.txt  seal_asset.ps1  tauri_android_dev.bat  tauri_android_init.bat  tauri_chesspulse_start.bat  tauri_dev.bat  webhook_bridge.py
src/: App.css  App.jsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: ai.rs  indexer.rs  lib.rs  watcher.rs
(+34 files in other folders)
