[package]
name = "enchanted-obsidian"
version = "0.1.0"
description = "EnchantedObsidian - A local-first Markdown editor with AI and OCR"
authors = ["Mrswami"]
license = "MIT"
repository = "https://github.com/Mrswami/Enchanted-Obsidian"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2", features = [] }
tauri-plugin-log = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
notify = { version = "6", features = ["serde"] }
regex = "1"
walkdir = "2"
tokio = { version = "1", features = ["full"] }
dirs-next = "2"
